--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,6 @@
     {% include scripts/masonry.html %}
     {% include scripts/misc.html %}
     {% include scripts/mathjax.html %}
-    {% include scripts/analytics.html %}
+    {% include cookie-consent.html %}
   </body>
 </html>
