--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -1,5 +1,16 @@
 <style>
-    #cookie-notice { z-index:9999; padding: 0.5rem 1rem; display: none; text-align: center; position: fixed; bottom: 0; width: calc(100% - 2rem); background: var(--global-footer-bg-color);}
+    #cookie-notice { 
+        z-index:9999;
+        padding: 0.5rem 1rem;
+        display: none;
+        text-align: center;
+        position: fixed;
+        bottom: 3rem;
+        left: 2rem;
+        width: calc(100% - 4rem);
+        background: var(--global-footer-bg-color);
+        border-radius: 20px;
+    }
     #cookie-notice a {display: inline-block; cursor: pointer; margin-left: 0.5rem;}
     @media (max-width: 800px) {
         #cookie-notice span {display: block; padding-top: 3px; margin-bottom: 1rem;}
@@ -9,7 +20,13 @@
         color: var(--global-footer-text-color);
     }
 </style>
-<div id="cookie-notice"><span>We would like to use third party cookies and scripts to improve the functionality of this website.</span><a id="cookie-notice-accept" class="btn btn-primary btn-sm">Approve</a><a href="/impressum" class="btn btn-primary btn-sm">More info</a></div>
+<div id="cookie-notice">
+    <span>Diese Webseite benutzt Drittanbieter Cookies um das Benutzererlebnis zu verbessern.</span><br>
+    <a id="cookie-notice-accept" class="btn btn-primary btn-sm">Annehmen</a>
+    <a id="cookie-notice-decline" class="btn btn-primary btn-sm">Ablehnen</a>
+    <a href="/impressum" class="btn btn-primary btn-sm">Weitere Informationen</a>
+</div>
+
 <script>
     function createCookie(name,value,days) {
         var expires = "";
@@ -34,13 +51,21 @@
         createCookie(name,"",-1);
     }
 
-    if(readCookie('cookie-notice-dismissed')=='true') {
+    
+    var cookiesAllowed = readCookie('cookie-notice-dismissed')
+    if(cookiesAllowed=='true') {
         {% include scripts/ga.js %}        
-    } else {
+    }
+    if(cookiesAllowed === null){ //Cookie not yet set
         document.getElementById('cookie-notice').style.display = 'block';
     }
     document.getElementById('cookie-notice-accept').addEventListener("click",function() {
         createCookie('cookie-notice-dismissed','true',31);
+        document.getElementById('cookie-notice').style.display = 'none';
+        location.reload();
+    });
+    document.getElementById('cookie-notice-decline').addEventListener("click",function() {
+        createCookie('cookie-notice-dismissed','false',31);
         document.getElementById('cookie-notice').style.display = 'none';
         location.reload();
     });
